--- a/templates/VirtualLab_directories.html
+++ b/templates/VirtualLab_directories.html
@@ -81,9 +81,9 @@
         <div class="d-flex justify-content-center flex-wrap gap-3 mb-4">
             <select id="categoryFilter" class="form-select w-auto">
                 <option value="all">All Categories</option>
-                <option value="manipulation">Transportation</option>
+                <option value="transportation">Transportation</option>
                 <option value="navigation">KnowledgeGraphs</option>
-                <option value="collaboration">Manipulation</option>
+                <option value="manipulation">Manipulation</option>
                 <option value="vision">NEEMs</option>
                 <option value="automation">Retail</option>
             </select>
