--- a/templates/Education.html
+++ b/templates/Education.html
@@ -36,7 +36,7 @@
     <div class="background"></div>
 
     <!-- Header Section -->
-    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(120, 120, 120, 0.8));  overflow: hidden;">
+    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden;">
         <div class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
             <!-- Left Logo -->
             <img src="../images/EASE_logo.png" alt="Left Image" class="img-fluid" style="max-width: 250px; height: auto;">
@@ -44,31 +44,31 @@
             <!-- Header Text -->
             <div>
                 <h1 class="display-4 text-white" style="font-weight: 700;">EASE Virtual Research Building</h1>
-                <p class="lead text-white" style="font-size: 1.2rem;">Driving Collaboration, Innovation, and Accessibility in AI and Robotics</p>
+                <p class="lead text-white fw-bold" style="font-size: 1.2rem;">Driving Collaboration, Innovation, and Accessibility in AI and Robotics</p>
             </div>
     
             <!-- Right Logo -->
-            <img src="../images/Logo - IAI Schrift.png" alt="Right Image" class="img-fluid" style="max-width: 250px; height: auto;">
+            <a href="https://ai.uni-bremen.de/" target="_blank">
+                <img src="../images/Logo - IAI Schrift.png" alt="Right Image" class="img-fluid" style="max-width: 250px; height: auto;">
+            </a>
         </div>
     </header>
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-md">
         <div class="container" style="background-color: rgba(0, 51, 102, 0.9); border-radius: 8px; padding: 0.5rem 1rem;">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon" style="color: #FFFFFF;"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a href="home.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Home</a></li>
-                    <li class="nav-item"><a href="aboutVRB.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">About VRB</a></li>
-                    <li class="nav-item"><a href="Research.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Research Highlights</a></li>
-                    <li class="nav-item"><a href="Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
-                    <li class="nav-item"><a href="Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
-                    <li class="nav-item"><a href="Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
+                    <li class="nav-item"><a href="../home.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Home</a></li>
+                    <li class="nav-item"><a href="./aboutVRB.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">About VRB</a></li>
+                    <li class="nav-item"><a href="./Research.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Research Highlights</a></li>
+                    <li class="nav-item"><a href="./Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
+                    <li class="nav-item"><a href="./Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
+                    <li class="nav-item"><a href="./Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
                     <!-- <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">ViB</a></li> -->
-                    <li class="nav-item"><a href="competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
-                    <li class="nav-item"><a href="Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
+                    <li class="nav-item"><a href="./competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
+                    <li class="nav-item"><a href="./Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
+                    <!-- <li class="nav-item"><a href="testing.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Testing</a></li> -->
                 </ul>
             </div>
         </div>
@@ -96,14 +96,14 @@
         </div>
     </section>
     <section class="container my-5">
-        <h2 class="text-center mb-4" style="color: white;">Tutorials</h2>
+        <h2 class="text-center mb-4" style="color: white;">Tutorials and Lectures</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">Introduction to Robotics</h5>
                         <p class="card-text">A beginner-friendly workshop covering robotic basics and key concepts.</p>
-                        <a href="https://jupyter.intel4coro.de/user/artnie-rpwr-assignments-ov29j5kk/lab/tree/rpwr-assignments/01_git-linux-python/a1_setup.ipynb" 
+                        <a href="https://jupyter.intel4coro.de/user/artnie-rpwr-assignments-4ly5hdss/lab/tree/rpwr-assignments/02_coordinates-tf/a2_coordinates-tf.ipynb" 
                         class="btn callaction" target="_blank">Start Tutorial</a>
                     </div>
                 </div>
@@ -111,9 +111,10 @@
             <div class="col">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Simulations in Robotics</h5>
-                        <p class="card-text">Learn how to use digital twins and real-time simulations to test algorithms.</p>
-                        <a href="#" class="btn callaction">Start Workshop</a>
+                        <h5 class="card-title">AICOR for Newcomers</h5>
+                        <p class="card-text">Learn Robot Programming through Visual Interface.</p>
+                        <a href="https://binder.intel4coro.de/v2/gh/IntEL4CoRo/blockly-playground.git/main?urlpath=lab/tree/examples/playground.jpblockly" 
+                        class="btn callaction" target="_blank">Start Tutorial</a>
                     </div>
                 </div>
             </div>
@@ -136,7 +137,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Robot Programming with ROS</h5>
                         <p class="card-text">Practical Introduction to Programming Robots with the Robot Operating System (ROS)</p>
-                        <a href="#" class="btn callaction">Enroll Now</a>
+                        <a href="https://elearning.uni-bremen.de/" class="btn callaction" target="_blank">Enroll Now</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +146,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Integrated Intelligent Systems</h5>
                         <p class="card-text">Master the Latest Techniques in Implementing Technical Cognitive Systems</p>
-                        <a href="#" class="btn callaction">Enroll Now</a>
+                        <a href="https://elearning.uni-bremen.de/" class="btn callaction" target="_blank">Enroll Now</a>
                     </div>
                 </div>
             </div>
@@ -154,13 +155,13 @@
                     <div class="card-body">
                         <h5 class="card-title">SUTURO</h5>
                         <p class="card-text">Get the Hands-On Experience of Working with and Programming a Real Robot</p>
-                        <a href="#" class="btn callaction">Enroll Now</a>
+                        <a href="https://elearning.uni-bremen.de/" class="btn callaction" target="_blank">Enroll Now</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="container my-5">
+    <!-- <section class="container my-5">
         <h2 class="text-center mb-4" style="color: white;"1>Gamified Learning</h2>
         <div class="row g-4">
             <div class="col-md-6">
@@ -182,7 +183,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     </div>
     <footer class="bg-dark text-white text-center py-3">
         &copy; 2024 EASE Virtual Research Building
