--- a/templates/VirtualLab_directories.html
+++ b/templates/VirtualLab_directories.html
@@ -17,7 +17,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../images/bg_image1.png');
+            background-image: url('../images/vlabs_bg.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -30,131 +30,153 @@
     <div class="background"></div>
 
     <!-- Header Section -->
-    <header class="text-center py-5" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden; ">
+    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden;">
         <div class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
             <!-- Left Logo -->
             <img src="../images/EASE_logo.png" alt="Left Image" class="img-fluid" style="max-width: 250px; height: auto;">
-
+    
             <!-- Header Text -->
             <div>
-                <h1 class="display-4 text-light">EASE Virtual Research Building</h1>
-                <p class="lead text-light">Driving Collaboration, Innovation, and Accessibility in AI and Robotics</p>
+                <h1 class="display-4 text-white" style="font-weight: 700;">EASE Virtual Research Building</h1>
+                <p class="lead text-white fw-bold" style="font-size: 1.2rem;">Driving Collaboration, Innovation, and Accessibility in AI and Robotics</p>
             </div>
-
+    
             <!-- Right Logo -->
-            <img src="../images/Logo - IAI Schrift.png" alt="Right Image" class="img-fluid" style="max-width: 250px; height: auto;">
+            <a href="https://ai.uni-bremen.de/" target="_blank">
+                <img src="../images/Logo - IAI Schrift.png" alt="Right Image" class="img-fluid" style="max-width: 250px; height: auto;">
+            </a>
         </div>
     </header>
 
     <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-md">
-            <div class="container" style="background-color: rgba(0, 51, 102, 0.9); ">
-                <!-- border-radius: 8px; padding: 0.5rem 1rem; -->
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon" style="color: #FFFFFF;"></span>
-                </button> -->
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a href="home.html" class="nav-link fs-5 fw-bold text-white" >Home</a></li>
-                        <li class="nav-item"><a href="aboutVRB.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">About VRB</a></li>
-                        <li class="nav-item"><a href="Research.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Research Highlights</a></li>
-                        <li class="nav-item"><a href="Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
-                        <li class="nav-item"><a href="Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
-                        <li class="nav-item"><a href="Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
-                        <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">ViB</a></li>
-                        <li class="nav-item"><a href="competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
-                        <li class="nav-item"><a href="Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
-                        <!-- <li class="nav-item"><a href="testing.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Testing</a></li> -->
-                    </ul>
-                </div>
+    <nav class="navbar navbar-expand-md">
+        <div class="container" style="background-color: rgba(0, 51, 102, 0.9); border-radius: 8px; padding: 0.5rem 1rem;">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a href="../home.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Home</a></li>
+                    <li class="nav-item"><a href="./aboutVRB.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">About VRB</a></li>
+                    <li class="nav-item"><a href="./Research.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Research Highlights</a></li>
+                    <li class="nav-item"><a href="./Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
+                    <li class="nav-item"><a href="./Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
+                    <li class="nav-item"><a href="./Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
+                    <!-- <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">ViB</a></li> -->
+                    <li class="nav-item"><a href="./competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
+                    <li class="nav-item"><a href="./Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
+                    <!-- <li class="nav-item"><a href="testing.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Testing</a></li> -->
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
+    <div class="container my-5" style="background-color: rgba(0, 0, 0, 0.3); border-radius: 8px; padding: 0.5rem 1rem;">
         <header class="text-center py-4">
             <div class="bg-transparent text-white py-4 px-3 rounded" style="display: inline-block;">
                 <!-- <h1 class="display-5">Virtual Labs Directory</h1> -->
                 <p class="lead display-6 fw-bold">Find and explore the labs best suited for your research needs</p>
             </div>
         </header>
-    <section class="container my-5">
-        <h2 class="text-center mb-4">Filter and Search</h2>
-        <div class="d-flex justify-content-center flex-wrap gap-3 mb-4">
-            <select id="categoryFilter" class="form-select w-auto">
-                <option value="all">All Categories</option>
-                <option value="transportation">Transportation</option>
-                <option value="navigation">KnowledgeGraphs</option>
-                <option value="manipulation">Manipulation</option>
-                <option value="vision">NEEMs</option>
-                <option value="automation">Retail</option>
-            </select>
-            <select id="toolsFilter" class="form-select w-auto">
-                <option value="all">All Tools</option>
-                <option value="simulation">Simulation</option>
-                <option value="digital-twins">Digital Twins</option>
-                <option value="cognitive-robotics">Cognitive Robotics</option>
-            </select>
-            <input type="text" id="searchInput" class="form-control w-auto" placeholder="Search Labs..." />
-        </div>
-    </section>
-    <section class="container my-5">
-        <h2 class="text-center mb-4">Available Labs</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-4" id="labsGrid">
-            <div class="col" data-category="manipulation" data-tool="simulation">
-                <div class="card h-100 shadow-sm text-center">
-                    <div class="card-body">
-                        <h3 class="card-title">Object Transportation Lab</h3>
-                        <p class="card-text">Experiment with robotic arms for object manipulation in dynamic settings.</p>
-                        <a href="#" class="btn btn-primary">Enter Lab</a>
+        <section class="container my-5">
+            <h2 class="text-center text-white mb-4">Filter and Search</h2>
+            <div class="d-flex justify-content-center flex-wrap gap-3 mb-4">
+                <select id="categoryFilter" class="form-select w-auto">
+                    <option value="all">All Categories</option>
+                    <option value="transportation">Transportation</option>
+                    <option value="knowledgegraphs">KnowledgeGraphs</option>
+                    <option value="manipulation">Manipulation</option>
+                    <option value="NEEMs">NEEMs</option>
+                    <option value="retail">Retail</option>
+                    <option value="learning">Learn</option>
+                </select>
+                <select id="toolsFilter" class="form-select w-auto">
+                    <option value="all">All Tools</option>
+                    <option value="simulation">Simulation</option>
+                    <option value="digital-twins">Digital Twins</option>
+                    <option value="query">Querying</option>
+                    <option value="programming">Programming</option>
+                </select>
+                <input type="text" id="searchInput" class="form-control w-auto" placeholder="Search Labs..." />
+            </div>
+        </section>
+        <section class="container my-5">
+            <h2 class="text-center text-white mb-4">Available Labs</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="labsGrid">
+                <div class="col" data-category="transportation" data-tool="simulation">
+                    <div class="card h-100 shadow-sm text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Object Transportation Lab</h3>
+                            <p class="card-text">Experiment with robotic arms for object manipulation in dynamic settings.</p>
+                            <a href="https://binder.intel4coro.de/v2/gh/sunava/pycram/f19dd08d8cb0990b2f606461500d77738f9d1387?urlpath=lab%2Ftree%2Fdemos%2Fpycram_virtual_building_demos%2Fstart_demo.ipynbapartment_pr2.ipynb&environments=apartment&robots=pr2&tasks=navigating" 
+                            class="btn callaction" target="_blank">Enter Lab</a>
+                            <a href="https://vib.ai.uni-bremen.de/page/labs/domestic-object-transportation-laboratory/" class="btn callaction" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" data-category="knowledgegraphs" data-tool="simulation">
+                    <div class="card h-100 shadow-sm text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Knowledge Graph Lab</h3>
+                            <p class="card-text">Develop and test algorithms for navigation in challenging environments.</p>
+                            <a href="https://binder.intel4coro.de/v2/gh/LucaKro/pycram/04b1475e88e101454a0647571e22d6fd32f8994d?urlpath=lab%2Ftree%2Fdemos%2Fpycram_virtual_building_demos%2Ftransporting_actions%2Ftransport_demo_armar.ipynb" 
+                            class="btn callaction" target="_blank">Enter Lab</a>
+                            <a href="https://vib.ai.uni-bremen.de/page/labs/actionable-knowledge-graph-laboratory/" class="btn callaction" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" data-category="manipulation" data-tool="simulation">
+                    <div class="card h-100 shadow-sm text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Manipulation Lab</h3>
+                            <p class="card-text">Study interactions between humans and robots in shared tasks.</p>
+                            <a href="https://binder.intel4coro.de/v2/gh/sunava/pycram/f19dd08d8cb0990b2f606461500d77738f9d1387?urlpath=lab%2Ftree%2Fdemos%2Fpycram_virtual_building_demos%2Fstart_demo.ipynb%3Fenvironments%3Dapartment%26robots%3Dpr2%26tasks%3Dcutting%26specialized_task%3Dhalving" 
+                            class="btn callaction" target="_blank">Enter Lab</a>
+                            <a href="https://vib.ai.uni-bremen.de/page/labs/action-cores/" class="btn callaction" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" data-category="NEEMs" data-tool="query">
+                    <div class="card h-100 shadow-sm text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">NEEMs Demonstration Lab</h3>
+                            <p class="card-text">Explore machine vision techniques for object detection and tracking.</p>
+                            <a href="https://data.open-ease.org/QA" class="btn callaction" target="_blank">Enter Lab</a>
+                            <a href="https://vib.ai.uni-bremen.de/page/labs/openease-knowledge-service-laboratory/" class="btn callaction" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" data-category="retail" data-tool="digital-twins">
+                    <div class="card h-100 shadow-sm text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Retail Robotics Lab</h3>
+                            <p class="card-text">Optimize robotic workflows in simulated industrial environments.</p>
+                            <a href="https://binder.intel4coro.de/v2/gh/hawkina/COAI/save-state?urlpath=lab/tree/notebooks/retail_donbot.ipynb" class="btn callaction" target="_blank">Enter Lab</a>
+                            <a href="https://vib.ai.uni-bremen.de/page/labs/dynamic-retail-robotics-laboratory/" class="btn callaction" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" data-category="learning" data-tool="programming">
+                    <div class="card h-100 shadow-sm text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">ROS Programming for Virtual Robot</h3>
+                            <p class="card-text">Immersive and practical approach to learning the intricacies of programming robots using ROS</p>
+                            <a href="https://jupyter.intel4coro.de/user/artnie-rpwr-assignments-4ly5hdss/lab/tree/rpwr-assignments/02_coordinates-tf/a2_coordinates-tf.ipynb" target="_blank"
+                            class="btn callaction">Enter Lab</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" data-category="learning" data-tool="programming">
+                    <div class="card h-100 shadow-sm text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Visual Programming for Robots</h3>
+                            <p class="card-text">Learn Robot Programming through Visual Interface.</p>
+                            <a href="https://binder.intel4coro.de/v2/gh/IntEL4CoRo/blockly-playground.git/main?urlpath=lab/tree/examples/playground.jpblockly" 
+                            target="_blank" class="btn callaction">Enter Lab</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col" data-category="navigation" data-tool="digital-twins">
-                <div class="card h-100 shadow-sm text-center">
-                    <div class="card-body">
-                        <h3 class="card-title">Knowledge Graph Lab</h3>
-                        <p class="card-text">Develop and test algorithms for navigation in challenging environments.</p>
-                        <a href="#" class="btn btn-primary">Enter Lab</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col" data-category="manipulation" data-tool="cognitive-robotics">
-                <div class="card h-100 shadow-sm text-center">
-                    <div class="card-body">
-                        <h3 class="card-title">Manipulation Lab</h3>
-                        <p class="card-text">Study interactions between humans and robots in shared tasks.</p>
-                        <a href="#" class="btn btn-primary">Enter Lab</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col" data-category="vision" data-tool="digital-twins">
-                <div class="card h-100 shadow-sm text-center">
-                    <div class="card-body">
-                        <h3 class="card-title">NEEMs Demonstration Lab</h3>
-                        <p class="card-text">Explore machine vision techniques for object detection and tracking.</p>
-                        <a href="#" class="btn btn-primary">Enter Lab</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col" data-category="automation" data-tool="simulation">
-                <div class="card h-100 shadow-sm text-center">
-                    <div class="card-body">
-                        <h3 class="card-title">Retail Robotics Lab</h3>
-                        <p class="card-text">Optimize robotic workflows in simulated industrial environments.</p>
-                        <a href="#" class="btn btn-primary">Enter Lab</a>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="col" data-category="manipulation" data-tool="cognitive-robotics">
-                <div class="card h-100 shadow-sm text-center">
-                    <div class="card-body">
-                        <h3 class="card-title">Grasping Techniques Lab</h3>
-                        <p class="card-text">Experiment with advanced grasping algorithms for various objects.</p>
-                        <a href="#" class="btn btn-primary">Enter Lab</a>
-                    </div>
-                </div>
-            </div> -->
-        </div>
-    </section>
+        </section>
+    </div>
+
     <footer class="bg-dark text-white text-center py-3">
         &copy; 2024 EASE Virtual Research Building
     </footer>
