--- a/templates/Education.html
+++ b/templates/Education.html
@@ -23,7 +23,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../images/education_background.png');
+            background-image: url('../images/edu_bg.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -36,7 +36,7 @@
     <div class="background"></div>
 
     <!-- Header Section -->
-    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden;">
+    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.2));  overflow: hidden;">
         <div class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
             <!-- Left Logo -->
             <img src="../images/EASE_logo.png" alt="Left Image" class="img-fluid" style="max-width: 250px; height: auto;">
@@ -75,7 +75,7 @@
     </nav>
 
 
-    <div class="container my-5" style="background-color: rgba(0, 0, 0, 0.6); border-radius: 8px; padding: 0.5rem 1rem;">
+    <div class="container my-5" style="background-color: rgba(0, 0, 0, 0.3); border-radius: 30px; padding: 0.5rem 1rem;">
     <header class="bg-transparent text-center py-4">
         <div class="container text-white py-4 rounded">
             <!-- <h1 class="display-5" style="color: rgba(0, 51, 102, 1);">Educational Resources</h1> -->
