--- a/templates/Resources.html
+++ b/templates/Resources.html
@@ -26,7 +26,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../images/bg_image1.png');
+            background-image: url('../images/education_background.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -39,7 +39,7 @@
     <div class="background"></div>
 
     <!-- Header Section -->
-    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden;">
+    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.4));  overflow: hidden;">
         <div class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
             <!-- Left Logo -->
             <img src="../images/EASE_logo.png" alt="Left Image" class="img-fluid" style="max-width: 250px; height: auto;">
@@ -77,7 +77,7 @@
         </div>
     </nav>
 
-    <div class="container my-5" style="background-color: rgba(0, 0, 0, 0.5); border-radius: 8px; padding: 0.5rem 1rem;">
+    <div class="container my-5" style="background-color: rgba(0, 0, 0, 0.4); border-radius: 30px; padding: 0.5rem 1rem;">
         <header class="bg-transparent text-center text-white py-4">
             <div class="container py-4 rounded">
                 <!-- <h1 class="display-5">Resources</h1> -->
