updated research hihglights

--- a/templates/Education.html
+++ b/templates/Education.html
@@ -101,6 +101,33 @@
             <div class="col">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
+                        <h5 class="card-title">Introduction to Cognitive Robotics</h5>
+                        <p class="card-text">Basic introduction to cognitive architectures for robotics systems.</p>
+                        <a href="https://intel4coro.informatik.uni-bremen.de/course/view.php?id=3" target="_blank" class="btn callaction">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Advanced Cognitive Robotics</h5>
+                        <p class="card-text">A deep dive into cognitive architectures for advanced robotics systems.</p>
+                        <a href="http://www.vernon.eu/cognitive_robotics/index.htm" target="_blank" class="btn callaction">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Knowledge Representation & Reasoning</h5>
+                        <p class="card-text">Introduction to structuring information and reasoning for robotics systems.</p>
+                        <a href="https://intel4coro.informatik.uni-bremen.de/course/view.php?id=2" target="_blank" class="btn callaction">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
                         <h5 class="card-title">Introduction to Robotics</h5>
                         <p class="card-text">A beginner-friendly workshop covering robotic basics and key concepts.</p>
                         <a href="https://jupyter.intel4coro.de/user/artnie-rpwr-assignments-4ly5hdss/lab/tree/rpwr-assignments/02_coordinates-tf/a2_coordinates-tf.ipynb" 
@@ -115,15 +142,6 @@
                         <p class="card-text">Learn Robot Programming through Visual Interface.</p>
                         <a href="https://binder.intel4coro.de/v2/gh/IntEL4CoRo/blockly-playground.git/main?urlpath=lab/tree/examples/playground.jpblockly" 
                         class="btn callaction" target="_blank">Start Tutorial</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Advanced Cognitive Robotics</h5>
-                        <p class="card-text">A deep dive into cognitive architectures for advanced robotics systems.</p>
-                        <a href="http://www.vernon.eu/cognitive_robotics/index.htm" target="_blank" class="btn callaction">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -147,6 +165,33 @@
                         <h5 class="card-title">Integrated Intelligent Systems</h5>
                         <p class="card-text">Master the Latest Techniques in Implementing Technical Cognitive Systems</p>
                         <a href="https://elearning.uni-bremen.de/" class="btn callaction" target="_blank">Enroll Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Sustainability in robotics</h5>
+                        <!-- <p class="card-text">Practical Introduction to Programming Robots with the Robot Operating System (ROS)</p> -->
+                        <a href="https://intel4coro.informatik.uni-bremen.de/enrol/index.php?id=6" class="btn callaction" target="_blank">Enroll Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Robot Agents</h5>
+                        <!-- <p class="card-text">Practical Introduction to Programming Robots with the Robot Operating System (ROS)</p> -->
+                        <a href="https://intel4coro.informatik.uni-bremen.de/enrol/index.php?id=4" class="btn callaction" target="_blank">Enroll Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">KI-basierte Robotersteuerung</h5>
+                        <!-- <p class="card-text">Practical Introduction to Programming Robots with the Robot Operating System (ROS)</p> -->
+                        <a href="https://intel4coro.informatik.uni-bremen.de/enrol/index.php?id=14" class="btn callaction" target="_blank">Enroll Now</a>
                     </div>
                 </div>
             </div>
